projects/examples/source/02.04.01.cpp
/////////////////////////////////////////////////////////////////

// support : en.wikipedia.org/wiki/X86_calling_conventions

/////////////////////////////////////////////////////////////////

#include <tuple>

/////////////////////////////////////////////////////////////////

[[nodiscard]] auto test(int x);

/////////////////////////////////////////////////////////////////

[[nodiscard]] auto test(int x) // support : compiler-explorer.com
{
	return x;
}

/////////////////////////////////////////////////////////////////

int main()
{
//	test(1); // error

//  ----------------------------------

    [[maybe_unused]] auto x = test(1);

//  ----------------------------------

    std::ignore = test(1);
}

/////////////////////////////////////////////////////////////////